--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -9,70 +9,124 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.TabScenarioCalculationController">
+<HBox maxWidth="1.7976931348623157E308" prefHeight="1120.0" prefWidth="1894.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.TabScenarioCalculationController">
    <children>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1200.0" spacing="10.0" HBox.hgrow="ALWAYS">
          <children>
             <HBox spacing="8.0">
                <children>
-                  <TitledPane collapsible="false" text="Best Roadmap" HBox.hgrow="ALWAYS">
+                  <TitledPane collapsible="false" text="Scenario Solution" textFill="#b10034" HBox.hgrow="ALWAYS">
                      <content>
-                        <VBox fx:id="roadmapContainer" prefHeight="112.0" />
+                        <HBox spacing="10.0">
+                           <children>
+                              <VBox HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <Label text="Optimized Roadmap:">
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <HBox>
+                                       <children>
+                                          <VBox fx:id="roadmapContainer" />
+                                          <Label fx:id="lblNPV" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="112.0" prefWidth="180.0" text="-" textFill="#b10034">
+                                             <font>
+                                                <Font name="System Bold" size="24.0" />
+                                             </font>
+                                             <HBox.margin>
+                                                <Insets left="10.0" />
+                                             </HBox.margin>
+                                             <padding>
+                                                <Insets bottom="20.0" />
+                                             </padding>
+                                          </Label>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                              <VBox fx:id="roadmapContainer11" prefHeight="112.0">
+                                 <children>
+                                    <Label text="Solution Robustness:">
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <VBox>
+                                       <children>
+                                          <HBox>
+                                             <children>
+                                                <VBox>
+                                                   <children>
+                                                      <ProgressIndicator fx:id="piRobustness" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
+                                                      <Label fx:id="lblRobustness" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" textAlignment="CENTER" textFill="#b10034" VBox.vgrow="ALWAYS">
+                                                         <font>
+                                                            <Font name="System Bold" size="24.0" />
+                                                         </font>
+                                                      </Label>
+                                                   </children>
+                                                </VBox>
+                                                <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="71.0" prefWidth="598.0" text="The general robustness is calculated by varying every set project modifier in the range from -5% to +5%. The value represents the percentage of calculations where the solution managed to stay on top" textOverrun="CLIP" wrapText="true" HBox.hgrow="ALWAYS">
+                                                   <HBox.margin>
+                                                      <Insets left="10.0" />
+                                                   </HBox.margin>
+                                                   <font>
+                                                      <Font name="System Italic" size="18.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                          </HBox>
+                                          <Button mnemonicParsing="false" onAction="#openRobustnessAnalysisTab" text="In-depth Analysis" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
                      </content>
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </TitledPane>
-                  <TitledPane collapsible="false" minWidth="360.0" text="NPV" HBox.hgrow="SOMETIMES">
-                     <content>
-                        <VBox fx:id="roadmapContainer1" prefHeight="112.0">
-                           <children>
-                              <Label fx:id="lblNPV" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="calculating..." textFill="#33ccf5" VBox.vgrow="ALWAYS">
-                                 <font>
-                                    <Font name="System Bold" size="36.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                     </content>
-                  </TitledPane>
-                  <TitledPane collapsible="false" contentDisplay="RIGHT" minWidth="153.0" prefHeight="152.0" text="Robustness">
-                     <graphic>
-                        <Button mnemonicParsing="false" onAction="#openRobustnessAnalysisTab" text="More" />
-                     </graphic>
-                     <content>
-                        <VBox fx:id="roadmapContainer11" prefHeight="112.0">
-                           <children>
-                              <ProgressIndicator fx:id="piRobustness" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
-                              <Label fx:id="lblRobustness" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" textFill="#33ccf5" VBox.vgrow="ALWAYS">
-                                 <font>
-                                    <Font name="System Bold" size="36.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                     </content>
-                  </TitledPane>
                </children>
             </HBox>
-            <HBox>
+            <HBox prefHeight="180.0">
                <children>
-                  <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" prefHeight="260.0" title="Amount of Broken Restrictions">
+                  <VBox HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label styleClass="Titel2" text="Project &amp; Process Dependencies" />
+                        <VBox VBox.vgrow="ALWAYS">
+                           <children>
+                              <SwingNode fx:id="swingNode" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                                 <HBox.margin>
+                                    <Insets left="8.0" />
+                                 </HBox.margin>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </SwingNode>
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="600.0" title="Amount of Broken Restrictions">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
                     <yAxis>
                       <NumberAxis forceZeroInRange="false" label="#Broken" side="LEFT" />
                     </yAxis>
-                  </BarChart>
-                  <SwingNode fx:id="swingNode" HBox.hgrow="ALWAYS">
                      <HBox.margin>
-                        <Insets left="8.0" />
+                        <Insets left="10.0" />
                      </HBox.margin>
-                  </SwingNode>
+                  </BarChart>
                </children>
             </HBox>
-            <HBox>
+            <Label styleClass="Titel2" text="Process Development">
+               <VBox.margin>
+                  <Insets bottom="10.0" top="20.0" />
+               </VBox.margin>
+            </Label>
+            <HBox spacing="10.0">
                <children>
                   <LineChart fx:id="lcProcessQuality" legendSide="RIGHT" legendVisible="false" prefHeight="400.0" stylesheets="@V3PMGUI.css" title="Process Quality" HBox.hgrow="ALWAYS">
                     <xAxis>
@@ -107,6 +161,9 @@
                      </yAxis>
                   </LineChart>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </HBox>
             <TableView fx:id="tvProcesses" maxHeight="250.0" prefWidth="200.0" VBox.vgrow="NEVER">
               <columns>
@@ -143,6 +200,9 @@
          <graphic>
             <ChoiceBox fx:id="cbProject" nodeOrientation="LEFT_TO_RIGHT" prefHeight="39.0" prefWidth="246.0" />
          </graphic>
+         <HBox.margin>
+            <Insets bottom="14.0" right="14.0" top="14.0" />
+         </HBox.margin>
       </TitledPane>
    </children>
 </HBox>
