--- a/src/com/v3pm_prototype/view/TabStart.fxml
+++ b/src/com/v3pm_prototype/view/TabStart.fxml
@@ -7,96 +7,124 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<SplitPane dividerPositions="0.5575959933222037" minHeight="500.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.TabStartController">
-   <items>
-      <VBox prefHeight="398.0" spacing="8.0">
+
+<HBox maxWidth="1.7976931348623157E308" spacing="8.0" stylesheets="@V3PMGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.TabStartController">
+   <children>
+      <VBox maxWidth="1.7976931348623157E308" prefHeight="398.0" spacing="40.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label text="Processes">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TableView fx:id="tvProcesses" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="280.0">
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-               <columns>
-                  <TableColumn fx:id="clmProcessesProcess" editable="false" prefWidth="258.0" text="Process" />
-                  <TableColumn fx:id="clmProcessesFixCosts" prefWidth="96.0" text="Fixed Costs" />
-                  <TableColumn fx:id="clmProcessesQ" editable="false" minWidth="0.0" prefWidth="65.0" text="Quality" />
-                  <TableColumn fx:id="clmProcessesT" prefWidth="57.0" text="Time" />
-                  <TableColumn fx:id="clmProcessesP" prefWidth="70.0" text="Price" />
-                  <TableColumn fx:id="clmProcessesOop" prefWidth="91.0" text="Op. Outflows" />
-                  <TableColumn fx:id="clmProcessesDGQ" prefWidth="62.0" text="Q. Deg." />
-                  <TableColumn fx:id="clmProcessesDGT" prefWidth="68.0" text="T. Deg" />
-                  <TableColumn fx:id="clmProcessesDFKT" prefWidth="202.0" text="Demand" />
-               </columns>
-            </TableView>
-            <Button fx:id="btnNewProcess" mnemonicParsing="false" onAction="#openAddProcessWindow" text="New Process">
-               <VBox.margin>
-                  <Insets bottom="15.0" />
-               </VBox.margin>
-            </Button>
-            <Label text="Projects">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TableView fx:id="tvProjects" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="280.0">
-               <VBox.margin>
-                  <Insets bottom="10.0" />
-               </VBox.margin>
-               <columns>
-                  <TableColumn fx:id="clmProjectsProject" editable="false" prefWidth="207.0" text="Project" />
-                  <TableColumn fx:id="clmProjectsPeriods" editable="false" minWidth="0.0" prefWidth="70.0" text="Periods" />
-                  <TableColumn fx:id="clmProjectsType" editable="false" prefWidth="90.0" text="Type" />
-                  <TableColumn fx:id="clmProjectsProcess" prefWidth="90.0" text="Process" />
-                  <TableColumn fx:id="clmProjectsFixCosts" prefWidth="81.0" text="Fixed Costs" />
-                  <TableColumn fx:id="clmProjectsOInv" prefWidth="81.0" text="Inv. Outflows" />
-                  <TableColumn fx:id="clmProjectsA" prefWidth="70.0" text="Ef. OOp" />
-                  <TableColumn fx:id="clmProjectsB" prefWidth="70.0" text="Ef. OInv" />
-                  <TableColumn fx:id="clmProjectsE" minWidth="0.0" prefWidth="70.0" text="Ef. on Time" />
-                  <TableColumn fx:id="clmProjectsU" prefWidth="70.0" text="Ef. on Qual" />
-                  <TableColumn fx:id="clmProjectsM" prefWidth="70.0" text="Ef. on FCosts" />
-               </columns>
-            </TableView>
-            <Button fx:id="btnNewProject" mnemonicParsing="false" onAction="#openAddProjectWindow" text="New Project">
-               <VBox.margin>
-                  <Insets bottom="15.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-         <padding>
-            <Insets left="14.0" right="14.0" top="14.0" />
-         </padding>
-      </VBox>
-      <VBox spacing="8.0">
-         <children>
-            <Label layoutX="17.0" layoutY="14.0" text="Scenarios">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <TableView fx:id="tvScenarios" layoutX="17.0" layoutY="45.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="280.0">
-              <columns>
-                <TableColumn fx:id="clmScenariosName" prefWidth="258.0" text="Name" />
-                  <TableColumn fx:id="clmScenariosPeriods" minWidth="0.0" prefWidth="83.0" text="Periods" />
-                  <TableColumn fx:id="clmScenariosSlots" prefWidth="49.0" text="Slots" />
-                  <TableColumn fx:id="clmScenarioDR" minWidth="0.0" prefWidth="125.0" text="Discount Rate" />
-                  <TableColumn fx:id="clmScenarioOAF" minWidth="0.0" prefWidth="93.0" text="OA FCosts" />
-                  <TableColumn fx:id="clmScenarioNPV" minWidth="0.0" prefWidth="153.0" text="NPV" />
-              </columns>
-            </TableView>
-            <HBox spacing="8.0">
+            <VBox>
                <children>
-                  <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#openNewScenarioWindow" text="New Scenario" />
-                  <Button fx:id="btnCalculateScenario" layoutX="161.0" layoutY="254.0" mnemonicParsing="false" onAction="#calculateScenario" text="Calculate Scenario" />
+                  <Label styleClass="Titel1" stylesheets="@V3PMGUI.css" text="Processes">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <TableView fx:id="tvProcesses" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="240.0" prefHeight="280.0">
+                     <VBox.margin>
+                        <Insets bottom="4.0" />
+                     </VBox.margin>
+                     <columns>
+                        <TableColumn fx:id="clmProcessesProcess" editable="false" prefWidth="260.0" text="Process" />
+                        <TableColumn fx:id="clmProcessesFixCosts" prefWidth="118.0" text="Fixed Costs" />
+                        <TableColumn fx:id="clmProcessesQ" editable="false" minWidth="0.0" prefWidth="74.0" text="Quality" />
+                        <TableColumn fx:id="clmProcessesT" prefWidth="74.0" text="Time" />
+                        <TableColumn fx:id="clmProcessesP" prefWidth="74.0" text="Price" />
+                        <TableColumn fx:id="clmProcessesOop" prefWidth="120.0" text="Op. Outflows" />
+                        <TableColumn fx:id="clmProcessesDGQ" prefWidth="74.0" text="Q. Deg." />
+                        <TableColumn fx:id="clmProcessesDGT" prefWidth="74.0" text="T. Deg" />
+                        <TableColumn fx:id="clmProcessesDFKT" maxWidth="1.7976931348623157E308" prefWidth="400.0" text="Demand" />
+                     </columns>
+                  </TableView>
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Contains all available processes. Processes can be modified by specific process-level Projects or general bpm-level Projects." VBox.vgrow="ALWAYS">
+                     <font>
+                        <Font name="System Italic" size="14.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="btnNewProcess" mnemonicParsing="false" onAction="#openAddProcessWindow" text="Create New Process">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
-            </HBox>
+            </VBox>
+            <VBox>
+               <children>
+                  <Label styleClass="Titel1" text="Projects">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <TableView fx:id="tvProjects" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="240.0" prefHeight="280.0">
+                     <VBox.margin>
+                        <Insets bottom="4.0" />
+                     </VBox.margin>
+                     <columns>
+                        <TableColumn fx:id="clmProjectsProject" editable="false" prefWidth="260.0" text="Project" />
+                        <TableColumn fx:id="clmProjectsPeriods" editable="false" minWidth="0.0" prefWidth="74.0" text="Periods" />
+                        <TableColumn fx:id="clmProjectsType" editable="false" prefWidth="120.0" text="Type" />
+                        <TableColumn fx:id="clmProjectsProcess" prefWidth="120.0" text="Process" />
+                        <TableColumn fx:id="clmProjectsFixCosts" prefWidth="120.0" text="Fixed Costs" />
+                        <TableColumn fx:id="clmProjectsOInv" prefWidth="120.0" text="Inv. Outflows" />
+                        <TableColumn fx:id="clmProjectsA" prefWidth="120.0" text="Ef. OOp" />
+                        <TableColumn fx:id="clmProjectsB" prefWidth="120.0" text="Ef. OInv" />
+                        <TableColumn fx:id="clmProjectsE" minWidth="0.0" prefWidth="120.0" text="Ef. on Time" />
+                        <TableColumn fx:id="clmProjectsU" prefWidth="120.0" text="Ef. on Qual" />
+                        <TableColumn fx:id="clmProjectsM" prefWidth="120.0" text="Ef. on FCosts" />
+                     </columns>
+                  </TableView>
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Contains all available projects. Projects can be classified as process- or bpm-level.">
+                     <font>
+                        <Font name="System Italic" size="14.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="btnNewProject" mnemonicParsing="false" onAction="#openAddProjectWindow" text="Create New Project">
+                     <VBox.margin>
+                        <Insets bottom="15.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
          </children>
          <padding>
             <Insets left="14.0" right="14.0" top="14.0" />
          </padding>
       </VBox>
-   </items>
-</SplitPane>
+      <VBox maxHeight="1.7976931348623157E308" spacing="8.0" HBox.hgrow="NEVER">
+         <children>
+            <TitledPane collapsible="false" maxHeight="1.7976931348623157E308" text="Scenarios" VBox.vgrow="ALWAYS">
+               <content>
+                  <VBox spacing="14.0">
+                     <children>
+                        <TableView fx:id="tvScenarios" layoutY="45.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="280.0">
+                          <columns>
+                            <TableColumn fx:id="clmScenariosName" prefWidth="258.0" text="Name" />
+                              <TableColumn fx:id="clmScenariosPeriods" minWidth="0.0" prefWidth="83.0" text="Periods" />
+                              <TableColumn fx:id="clmScenariosSlots" prefWidth="49.0" text="Slots" />
+                              <TableColumn fx:id="clmScenarioDR" minWidth="0.0" prefWidth="125.0" text="Discount Rate" />
+                              <TableColumn fx:id="clmScenarioOAF" minWidth="0.0" prefWidth="93.0" text="OA FCosts" />
+                              <TableColumn fx:id="clmScenarioNPV" minWidth="0.0" prefWidth="153.0" text="NPV" />
+                          </columns>
+                        </TableView>
+                        <HBox spacing="8.0">
+                           <children>
+                              <Button fx:id="btnNewScenario" layoutX="17.0" layoutY="254.0" mnemonicParsing="false" onAction="#openNewScenarioWindow" text="Create New Scenario" />
+                              <Button fx:id="btnCalculateScenario" layoutX="161.0" layoutY="254.0" mnemonicParsing="false" onAction="#calculateScenario" text="Calculate Scenario" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </content>
+            </TitledPane>
+         </children>
+         <padding>
+            <Insets left="14.0" right="14.0" top="14.0" />
+         </padding>
+         <HBox.margin>
+            <Insets />
+         </HBox.margin>
+      </VBox>
+   </children>
+   <padding>
+      <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
+   </padding>
+</HBox>
