--- a/src/com/v3pm_prototype/view/V3PMGUI.css
+++ b/src/com/v3pm_prototype/view/V3PMGUI.css
@@ -1,3 +1,18 @@
+.Titel1 {
+	-fx-text-fill: #B10034;
+	-fx-font: 20pt "System";
+}
+
+.Titel2 {
+	-fx-text-fill: #B10034;
+	-fx-font: 16pt "System";
+}
+
+.InfoText {
+	-fx-text-fill: #D6D6D6;
+	-fx-font: 8pt "System";
+}
+
 .menu-bar {
     -fx-background-color: #aeb5ba, linear-gradient(to bottom, #ecf4fa 0%, #ced4d9 100%);
     -fx-background-insets: 0, 0 0 1 0;
