--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -140,10 +140,10 @@
             </HBox>
             <Label styleClass="Titel2" text="Process Details">
                <VBox.margin>
-                  <Insets bottom="4.0" />
+                  <Insets />
                </VBox.margin>
             </Label>
-            <TableView fx:id="tvProcesses" maxHeight="250.0" prefWidth="200.0" VBox.vgrow="NEVER">
+            <TableView fx:id="tvProcesses" maxHeight="250.0" prefHeight="201.0" prefWidth="1400.0" VBox.vgrow="NEVER">
               <columns>
                 <TableColumn fx:id="clmProcessesName" prefWidth="311.0" text="Process" />
                 <TableColumn fx:id="clmProcessesQ" prefWidth="95.0" text="Quality" />
@@ -156,15 +156,44 @@
                   <TableColumn fx:id="clmProcessesFCDelta" prefWidth="102.0" text="FCDelta" />
               </columns>
             </TableView>
-            <Label styleClass="Titel1" text="Scenario Restrictions:" />
-            <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="600.0" title="Amount of Broken Restrictions">
-              <xAxis>
-                <CategoryAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis forceZeroInRange="false" label="#Broken" side="LEFT" />
-              </yAxis>
-            </BarChart>
+            <VBox>
+               <children>
+                  <Label styleClass="Titel1" text="Scenario Restrictions:">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Label>
+                  <HBox>
+                     <children>
+                        <VBox prefHeight="241.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label styleClass="Titel2" text="Used Restriction Set:">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <ListView fx:id="lvRestrictions" prefHeight="200.0" prefWidth="340.0">
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </ListView>
+                           </children>
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" prefHeight="200.0" title="Amount of Broken Restrictions" HBox.hgrow="ALWAYS">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis forceZeroInRange="false" label="#Broken" side="LEFT" />
+                          </yAxis>
+                        </BarChart>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
          <padding>
             <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
