--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -9,15 +9,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox maxWidth="1.7976931348623157E308" prefHeight="1120.0" prefWidth="1894.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.TabScenarioCalculationController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="1894.0" stylesheets="@V3PMGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.TabScenarioCalculationController">
    <children>
-      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1200.0" spacing="10.0" HBox.hgrow="ALWAYS">
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1200.0" spacing="8.0" HBox.hgrow="ALWAYS">
          <children>
             <HBox spacing="8.0">
                <children>
                   <TitledPane collapsible="false" text="Scenario Solution" textFill="#b10034" HBox.hgrow="ALWAYS">
                      <content>
-                        <HBox spacing="10.0">
+                        <HBox prefHeight="105.0" prefWidth="1398.0" spacing="10.0">
                            <children>
                               <VBox HBox.hgrow="ALWAYS">
                                  <children>
@@ -25,6 +25,9 @@
                                        <VBox.margin>
                                           <Insets bottom="10.0" />
                                        </VBox.margin>
+                                       <font>
+                                          <Font size="13.0" />
+                                       </font>
                                     </Label>
                                     <HBox>
                                        <children>
@@ -48,8 +51,11 @@
                                  <children>
                                     <Label text="Solution Robustness:">
                                        <VBox.margin>
-                                          <Insets bottom="10.0" />
+                                          <Insets bottom="5.0" />
                                        </VBox.margin>
+                                       <font>
+                                          <Font size="13.0" />
+                                       </font>
                                     </Label>
                                     <VBox>
                                        <children>
@@ -60,22 +66,25 @@
                                                       <ProgressIndicator fx:id="piRobustness" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS" />
                                                       <Label fx:id="lblRobustness" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" textAlignment="CENTER" textFill="#b10034" VBox.vgrow="ALWAYS">
                                                          <font>
-                                                            <Font name="System Bold" size="24.0" />
+                                                            <Font name="System Bold" size="18.0" />
                                                          </font>
                                                       </Label>
                                                    </children>
                                                 </VBox>
-                                                <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="71.0" prefWidth="598.0" text="The general robustness is calculated by varying every set project modifier in the range from -5% to +5%. The value represents the percentage of calculations where the solution managed to stay on top" textOverrun="CLIP" wrapText="true" HBox.hgrow="ALWAYS">
+                                                <Label alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="598.0" text="The general robustness is calculated by varying every set project modifier in the range from -5% to +5%. The value represents the percentage of calculations where the solution managed to stay on top" textOverrun="CLIP" wrapText="true" HBox.hgrow="ALWAYS">
                                                    <HBox.margin>
                                                       <Insets left="10.0" />
                                                    </HBox.margin>
                                                    <font>
-                                                      <Font name="System Italic" size="18.0" />
+                                                      <Font name="System Italic" size="12.0" />
                                                    </font>
                                                 </Label>
                                              </children>
                                           </HBox>
-                                          <Button mnemonicParsing="false" onAction="#openRobustnessAnalysisTab" text="In-depth Analysis" />
+                                          <Button mnemonicParsing="false" onAction="#openRobustnessAnalysisTab" text="In-depth Analysis">
+                                             <VBox.margin>
+                                                <Insets top="4.0" />
+                                             </VBox.margin></Button>
                                        </children>
                                     </VBox>
                                  </children>
@@ -86,6 +95,9 @@
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </TitledPane>
                </children>
             </HBox>
@@ -93,13 +105,13 @@
                <children>
                   <Label styleClass="Titel1" text="Process Information:">
                      <VBox.margin>
-                        <Insets bottom="10.0" top="20.0" />
+                        <Insets />
                      </VBox.margin>
                   </Label>
                   <Label styleClass="Titel2" text="Process Development:" />
                </children>
             </VBox>
-            <HBox prefHeight="250.0" spacing="10.0">
+            <HBox prefHeight="240.0" spacing="10.0">
                <children>
                   <LineChart fx:id="lcProcessQuality" legendSide="RIGHT" legendVisible="false" prefHeight="400.0" stylesheets="@V3PMGUI.css" title="Process Quality" HBox.hgrow="ALWAYS">
                     <xAxis>
@@ -143,7 +155,7 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <TableView fx:id="tvProcesses" maxHeight="250.0" prefHeight="201.0" prefWidth="1400.0" VBox.vgrow="NEVER">
+            <TableView fx:id="tvProcesses" maxHeight="250.0" prefHeight="140.0" prefWidth="1400.0" VBox.vgrow="NEVER">
               <columns>
                 <TableColumn fx:id="clmProcessesName" prefWidth="311.0" text="Process" />
                 <TableColumn fx:id="clmProcessesQ" prefWidth="95.0" text="Quality" />
@@ -156,22 +168,22 @@
                   <TableColumn fx:id="clmProcessesFCDelta" prefWidth="102.0" text="FCDelta" />
               </columns>
             </TableView>
-            <VBox>
+            <VBox maxHeight="1.7976931348623157E308">
                <children>
                   <Label styleClass="Titel1" text="Scenario Restrictions:">
                      <VBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets />
                      </VBox.margin>
                   </Label>
-                  <HBox>
+                  <Label styleClass="Titel2" text="Used Restriction Set:">
+                     <VBox.margin>
+                        <Insets bottom="8.0" />
+                     </VBox.margin>
+                  </Label>
+                  <HBox maxHeight="1.7976931348623157E308" prefHeight="180.0" prefWidth="1400.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <VBox prefHeight="241.0" HBox.hgrow="ALWAYS">
+                        <VBox maxHeight="1.7976931348623157E308" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label styleClass="Titel2" text="Used Restriction Set:">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" />
-                                 </VBox.margin>
-                              </Label>
                               <ListView fx:id="lvRestrictions" prefHeight="200.0" prefWidth="340.0">
                                  <VBox.margin>
                                     <Insets />
@@ -182,7 +194,7 @@
                               <Insets right="10.0" />
                            </HBox.margin>
                         </VBox>
-                        <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" prefHeight="200.0" title="Amount of Broken Restrictions" HBox.hgrow="ALWAYS">
+                        <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" prefWidth="775.0" title="Amount of Broken Restrictions" HBox.hgrow="ALWAYS">
                           <xAxis>
                             <CategoryAxis side="BOTTOM" />
                           </xAxis>
@@ -191,6 +203,9 @@
                           </yAxis>
                         </BarChart>
                      </children>
+                     <padding>
+                        <Insets bottom="8.0" />
+                     </padding>
                   </HBox>
                </children>
             </VBox>
@@ -199,9 +214,9 @@
             <Insets bottom="14.0" left="14.0" right="14.0" top="14.0" />
          </padding>
       </VBox>
-      <TitledPane collapsible="false" contentDisplay="RIGHT" graphicTextGap="8.0" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefHeight="590.0" text="Roadmap Explorer" HBox.hgrow="NEVER">
+      <TitledPane collapsible="false" contentDisplay="RIGHT" graphicTextGap="8.0" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" text="Roadmap Explorer" HBox.hgrow="NEVER">
          <content>
-            <VBox prefHeight="538.0" prefWidth="450.0">
+            <VBox maxHeight="1.7976931348623157E308" prefWidth="450.0">
                <children>
                   <VBox VBox.vgrow="ALWAYS">
                      <children>
